Add nogncheck to OS_CHROMEOS-guarded #include from r472400.

gn check doesn't understand preprocessor directives.

Currently a failure results on the Ozone FYI builders.

BUG=722811
TBR=afakhry@chromium.org, dbeam@chromium.org

Review-Url: https://codereview.chromium.org/2892423002
Cr-Commit-Position: refs/heads/master@{#473501}

Former-commit-id: 6510e3d00f827f2f071d333a47a560fa9fe41dbf